--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body>
 
-	<div class="over-site-header">
+	<div id="top" class="over-site-header">
 	  <h1>beasy------------</h1>
 	  <p>------------------------------</p>
 	  <img ... />
@@ -84,44 +84,37 @@
 				<div class="fs_menu_overlay">
 				</div>
 				<div class="fs_menu_container">
+
 					<nav class="fs_menu_nav">
 						<ul class="fs_menu_list">
 							<li>
-								<a href="#">
+								<a href="index.html">
 									<span><span>H</span>Home</span>
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="services.html">
 									<span><span>S</span>Services</span>
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="login.html">
 									<span><span>L</span>Log In</span>
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="register.html">
 									<span><span>R</span>Register</span>
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="contact.html">
 									<span><span>C</span>Contact</span>
 								</a>
 							</li>
 						</ul>
 					</nav>
-					<div class="fs_social_container d-flex flex-row justify-content-end align-items-center">
-						<ul class="fs_social">
-							<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-							<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-							<a href="#" class="google"><i class="fa fa-google"></i></a>
-							<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-							<a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-						</ul>
-					</div>
+					
 				</div> <!-- End Hamburger Menu -->
 
 
@@ -229,9 +222,11 @@
 
 	<!-- Contact -->
 	<div class="contact">
+
 		<div class="contact_background">
 			<img src="images/bild3.jpg">
 		</div>
+
 		<div class="container container_contact">
 
 			<div class="row">
@@ -251,7 +246,15 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row row_back">
+				<div class="back_button">
+					<a href="contact.html#top"><i class="fa fa-angle-up"></i></a>
+				</div>
+			</div>
+
 		</div>
+
 	</div> <!-- End Contact -->
 
 
@@ -293,5 +296,11 @@
 </div> <!-- End Super Container -->
 
 </body>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/java.js"></script>
+
 
 </html>
